<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.itis.android.lessondb.ui.main.fragments.lists.book_lists.BookDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin.large">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/secondary_text" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin.small"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text.16"
            tools:text="The Lord of the Rings" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin.large">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/realmAuthor"
            android:textColor="@color/secondary_text" />

        <TextView
            android:id="@+id/tv_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin.small"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text.16"
            tools:text="The Lord of the Rings" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin.large">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre"
            android:textColor="@color/secondary_text" />

        <TextView
            android:id="@+id/tv_field_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin.small"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text.16"
            tools:text="The Lord of the Rings" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin.large">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release_date"
            android:textColor="@color/secondary_text" />

        <TextView
            android:id="@+id/tv_field_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin.small"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text.16"
            tools:text="The Lord of the Rings" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin.large">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc"
            android:textColor="@color/secondary_text" />

        <TextView
            android:id="@+id/tv_field_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin.small"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text.16"
            tools:text="The Lord of the Rings" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin.large">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_have_book"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:layout_marginRight="8dp"
            android:background="@color/colorAccent"
            android:text="@string/have_this_book"
            android:textAllCaps="false"
            android:textSize="@dimen/text.16"
            android:textColor="@color/white"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_get_book"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:layout_marginLeft="8dp"
            android:background="@color/colorAccent"
            android:text="@string/get_this_book"
            android:textAllCaps="false"
            android:textSize="@dimen/text.16"
            android:textColor="@color/white"/>
    </LinearLayout>
</LinearLayout>
