<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.lists.book.BookDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin.large">

        <TextView
            android:id="@+id/tv_field_name_reader_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/secondary_text" />

        <TextView
            android:id="@+id/tv_vid_name_reader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin.small"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text.16"
            tools:text="The Lord of the Rings" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin.large">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_name"
            android:textColor="@color/secondary_text" />

        <TextView
            android:id="@+id/tv_book_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin.small"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text.16"
            tools:text="The Lord of the Rings" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin.large">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_vid_date"
            android:textColor="@color/secondary_text" />

        <TextView
            android:id="@+id/tv_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin.small"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text.16"
            tools:text="The Lord of the Rings" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin.large">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_vid_date"
            android:textColor="@color/secondary_text" />

        <TextView
            android:id="@+id/tv_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin.small"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text.16"
            tools:text="The Lord of the Rings" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin.large">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_book_action"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:layout_marginRight="8dp"
            android:background="@color/colorAccent"
            android:text="@string/return_book"
            android:textAllCaps="false"
            android:textSize="@dimen/text.16"
            android:textColor="@color/white"/>

    </LinearLayout>
</LinearLayout>