<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin.normal"
            android:textColorHint="@color/secondary_text">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"
                android:selectAllOnFocus="false"
                android:theme="@style/EditText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin.normal"
            android:textColorHint="@color/secondary_text">

            <EditText
                android:id="@+id/et_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/desc"
                android:inputType="textMultiLine"
                android:selectAllOnFocus="false"
                android:theme="@style/EditText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_releaseDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin.normal"
            android:textColorHint="@color/secondary_text">

            <EditText
                android:id="@+id/et_releaseDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/releaseDate"
                android:onClick="showDatePicker"
                android:inputType="text"
                android:selectAllOnFocus="false"
                android:theme="@style/EditText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin.normal"
            android:textColorHint="@color/secondary_text">

            <EditText
                android:id="@+id/et_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/genre"
                android:inputType="text"
                android:selectAllOnFocus="false"
                android:theme="@style/EditText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin.normal"
            android:textColorHint="@color/secondary_text">

            <EditText
                android:id="@+id/et_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/realmAuthor"
                android:inputType="text"
                android:theme="@style/EditText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_publish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin.normal"
            android:textColorHint="@color/secondary_text">

            <EditText
                android:id="@+id/et_publish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/publish"
                android:inputType="text"
                android:theme="@style/EditText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin.normal"
            android:background="@color/colorPrimary"
            android:text="@string/add"
            android:textColor="@color/white" />

    </LinearLayout>

</ScrollView>